Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Change-Id: Ieb6a5450b76c7a5305678f09ecb3785a7fe90c47
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>